Import of QJZHOU/Encode-CNMap-0.13 from CPAN.
gitpan-cpan-distribution: Encode-CNMap
gitpan-cpan-version:      0.13
gitpan-cpan-path:         QJZHOU/Encode-CNMap-0.13.tar.gz
gitpan-cpan-author:       QJZHOU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.13    2003.02.02 20:41  Qing-Jie Zhou
+    * Add Patchfile to tab2ucm.pl
+    * Patch GB2312 UCM to support Jin-Yong's novels in GBK encoding
+
 0.12    2003.01.30 17:51  Qing-Jie Zhou
 	* Modify README to change tabs into spaces
 
