Import of QJZHOU/Encode-CNMap-0.15 from CPAN.
gitpan-cpan-distribution: Encode-CNMap
gitpan-cpan-version:      0.15
gitpan-cpan-path:         QJZHOU/Encode-CNMap-0.15.tar.gz
gitpan-cpan-author:       QJZHOU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.15    2003.02.17 22:31  Qing-Jie Zhou
+    * Change #!/usr/local/bin/perl -> #!/usr/bin/perl
+    * Modify README to correct cnmap.pl -> cnmap
+
 0.14    2003.02.17 22:06  Qing-Jie Zhou
     * Rename cnmap.pl -> cnmap to avoid bad behavior of Pod::HTML
     * Rename cnmapdir.pl -> cnmapdir
