--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+0.16    2003.04.29 07:12  Qing-Jie Zhou
+    * Add support via http://rt.cpan.org
+    * Add ucm/gbk2gb.pl to generate gb2312-add.dat with
+      given GBK and GB2312 coding
+    * Add ucm/gbk2gb_check.pl to ensure GB2312-add.dat is working
+    * Add ucm/gbkcode.pl to show Gbk and UTF-16BE coding
+    * Add ucm/cntest.bat to check bad encodings from GBK to GB2312
+    * Enhanced gb2312-add.dat to support more chinese novels
+      Total: 1456 additional chinese words
+
 0.15    2003.02.17 22:31  Qing-Jie Zhou
     * Change #!/usr/local/bin/perl -> #!/usr/bin/perl
     * Modify README to correct cnmap.pl -> cnmap
