--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-﻿Encode::CNMap version 0.21
+Encode::CNMap version 0.22
 ========
 
 NAME
@@ -18,7 +18,7 @@ SYNOPSIS
     $data="中華中华";
     printf "[Mixed GBK] %s", $data;
     printf " -> [Simplified GB2312] %s\n", simp_to_gb($data);
-    
+
     # Traditional encoding (Big5) -> GB2312 encoding 中华中华
     $data="い地い地";
     printf "[Traditional Big5] %s", $data;
@@ -63,6 +63,7 @@ DESCRIPTION
 BUGS, REQUESTS, COMMENTS
 
 Please report any requests, suggestions or bugs via
+http://sourceforge.net/projects/bookbot
 http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Encode-CNMap
 
 INSTALLATION
@@ -81,7 +82,7 @@ This module requires perl version 5.8.0 or later.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2003 Qing-Jie Zhou <qjzhou@hotmail.com>
+Copyright 2003-2004 Qing-Jie Zhou <qjzhou@hotmail.com>
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
+This library is free software; you can redistribute it and/or modify it under
+the same terms as Perl itself.
